--- a/styles.css
+++ b/styles.css
@@ -5,81 +5,101 @@ body{
     margin:0;
     padding: 20px;
     color: #333;
-    background-color: #dfe3f6;
+    background: #555353;
 }
-
-
 
 header, footer {
-    background-color: #9ea7cd;
-    color: white;
+    background-color: #848eb9;
+    color: #333;
     padding: 1em;
+    border-radius: 4px;
 }
 
-nav {
-  background-color: #9ea7cd;           
-  padding: 10px 20px;
-}
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  display: flex;                    
-  gap: 20px;                        
-  justify-content: flex-end;          
-}
-
-nav ul li a {
-  color: #fff;                     
-  text-decoration: none;            
-  font-weight: bold;
-  padding: 8px 15px;
-  border-radius: 5px;
-  transition: background 0.3s ease;
+.banner-header {
+    display: flex;
+    color: #fff;
+    justify-content: space-between;
+    align-items: center;
+    padding: 40px 40px;
+    border-radius: 4px;
+    margin-bottom: 40px;
+    box-shadow: 6px 4px 8px #333;
+    background: #848eb9;  
 }
 
-
-nav ul li a:hover {
-  background-color: #333;       
-  color: #fff;
+.header-left h1{
+    margin: 0;
+    font-size: 2.5rem;
+    color: #fff;
+    margin-bottom: 20px;
+    
+}
+.header-left .subtitle {
+    margin: 5px 0 0 ;
+    font-size: 1.5rem;
+    color: #fff;
+}
+.header-nav {
+    display: flex;
+    gap: 15px;
 }
 
+.nav-btn {
+    background-color: #dfe3f6;
+    color: #333;
+    font-weight: bold;
+    padding: 12px 24px;
+    border-radius: 8px;
+    text-decoration: none;
+    font-size: 1.5rem;
+    transition: all 0.3s ease;
+    box-shadow: 4px 4px 10px #555353;
+}
+
+.nav-btn:hover {
+    background-color: #F7df8e;
+}
+
+.nav-btn.active {
+    border:none;
+    background-color: #F7df8e;
+}
 
 main {
     max-width: 50em;
     margin: 2em auto;
     padding: 0 1em;
+    text-align: left;
 }
 
-
-
-
 .projects {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));      
-gap: 20px;           
-padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));      
+    gap: 20px;           
+    padding: 20px;
+    background: #dfe3f6;
     }
 
 .project-item {
-    display:inline-block;
+    display: inline-block;
     background: #fff;
-    border-radius: 10px;
+    border-radius: 4px;
     overflow: hidden;
-    box-shadow: 6px 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 6px 4px 8px #9ea7cd;
     text-align: center;
     padding-bottom: 15px;
+    min-height: 350px;
 }
 
 .project-item a {
   display: inline-block;           
   font-weight: bold;
   font-size: 1em;
-  color: #fff;                     
+  color: #333;                     
   text-decoration: none;
-  background-color: #9ea7cd;      
+  background-color: #f7df8e;      
   padding: 10px 20px;             
-  border-radius: 8px;             
+  border-radius: 4px;             
   transition: background 0.3s ease;
 }
 
@@ -94,18 +114,18 @@ padding: 20px;
 }
 
 
-
 .project-desc {
-    font-size: 0.9em;
-    color: #666;
+    font-size: 1.5em;
+    color: #333;
     padding: 0 10px;
+    
 }
 
 .project-link {
  flex: 1 1 150px;      
     max-width: 200px;
-    background-color: aliceblue;
-    border-radius: 10px;
+    background-color: #9ea7cd;
+    border-radius: 4px;
     padding: 15px;
     text-align: center;
     text-decoration: none;
@@ -128,20 +148,44 @@ img.float-right {
   grid-template-columns: repeat(3, 1fr); 
   gap: 20px;
   padding: 40px;
-  background-color: aliceblue
+  border: 3px solid #333;
+  border-radius: 4px;
+  background: #DFE3F6;
+  box-shadow: 8px 6px 15px #333;
+}
+.grid-title {
+    grid-column: 1/-1;
+    margin-bottom: 30px;
+    font-size: 2rem;
+}
+.box {
+    background: #f7df8e;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 4px 4px 10px rgba(0,0,0,0.1);
+}
+
+.box h3{
+    margin-bottom: 10px;
 }
 
 .about-section {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between; 
   align-items: center;            
   gap: 40px;
-  padding: 60px;
+  margin-bottom: 60px;
+  padding: 3em;
+  border-radius: 4px;
+  background: #DFE3F6;
+  box-shadow: 8px 6px 15px #333;
 }
 
 .about-text {
   flex: 1;                        
   max-width: 600px;
+  line-height: 1.5;
 }
 
 .about-text h2 {
@@ -156,17 +200,19 @@ img.float-right {
 
 .about-text .btn {
   display: inline-block;
-  background: #9ea7cd;
-  color: #fff;
+  background: #f7df8e;
+  color: #333;
   padding: 10px 20px;
   border-radius: 6px;
   text-decoration: none;
   font-weight: bold;
-  transition: background 0.3s ease;
+  transition: background 0.3s ease;   
+  box-shadow: 6px 4px 12px #555353;
 }
 
 .about-text .btn:hover {
-  background: #333;
+  background: #9EA7CD;
+    color: #333;
 }
 
 .about-image {
@@ -176,31 +222,25 @@ img.float-right {
 
 .about-image img {
   max-width: 100%;
-  border-radius: 12px;
-    box-shadow: 6px 4px 12px rgba(0,0,0,0.1);}
-
-.hero-heading {
-  width: 100%;
-  text-align: left;        
-  background-color: #9ea7cd;
+  border-radius: 4px;
+  box-shadow: 6px 4px 12px rgba(0,0,0,0.1);
 }
 
-.hero-heading h1 {
-  font-size: 3rem;
-  margin-bottom: 10px;
-  color: #fff;
-}
-
-.hero-heading .subtitle {
-  font-size: 1.3rem;
-  color: white;
-  font-weight: 400;
-}
 
 .credits {
-    background-color: #9ea7cd;
-    color: white;
+    background-color: #DFE3F6;
+    color: #333;
+    font-size: 0.9rem;
     padding: 30px;
     margin-top: 40px;
-    border-radius: 10px;
+    border-radius: 4px;
+    box-shadow: 6px 4px 12px rgba(0,0,0,0.1);
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    margin-top: 40px;
+    background: #9EA7CD;
+    color: #fff;
 }
